# TimesUserProfilingCumAdRecommendation

./: CONTRIBUTING.md  Dockerfile  MANIFEST.in  PROJECT_SUMMARY.md  PUBLISHING.md  README.md  create_docs.py  example_usage.py  kaggle.json  newnotebook.py  newnotebook_backup_20251014_065648.py  newnotebook_backup_complete.py  newnotebook_backup_complete_fix_20251014_071108.py  newnotebook_backup_final.py  newnotebook_backup_paths_20251014_064726.py  newnotebook_before_rag_fix.py  news_training_standalone.py  pyproject.toml  requirements.txt  setup.py  train_news_pretrained_model.py  train_news_with_pandas.py  update_github.sh
deployment/: api.py
docs/: API.md  DEPLOYMENT.md
outputs/: best_wide_deep_model.pt  cold_item_predictions.parquet  final_evaluation_report.json  final_recommendations.parquet  news_model_metadata.json  news_pretrained_model.pth  raw_items.parquet  tenrec_benchmark_results.json
src/: fix_feature_store.py
tests/: test_predictor.py
times_ctr_optimizer/: __init__.py  cli.py  predictor.py
times_ctr_optimizer/api/: __init__.py  server.py
times_ctr_optimizer/models/: __init__.py  wide_deep.py
times_ctr_optimizer/utils/: __init__.py  data_loader.py  feature_engineering.py  metrics.py
