[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "times-ctr-optimizer"
version = "1.0.0"
description = "Enterprise CTR prediction for Times Network"
authors = [{name = "Prateek", email = "prat.cann.170701@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0"]
api = ["fastapi>=0.104.0", "uvicorn[standard]>=0.24.0"]

[project.scripts]
times-ctr = "times_ctr_optimizer.cli:main"

[project.urls]
Homepage = "https://github.com/prateek4ai/TimesUserProfilingCumAdRecommendation"
Repository = "https://github.com/prateek4ai/TimesUserProfilingCumAdRecommendation"
